<resources>
    <string name="app_name">飞鸽传媒</string>

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="setting">设置</string>
    <string name="resume">Resume</string>
    <string name="cancel">取消</string>
    <string name="title_dialog">Tips</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
    <string name="message_overlay_failed">Your phone is not allowed us to draw on other applications.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>

    <string name="login_login">登陆</string>
    <string name="login_register">注册</string>
    <string name="login_hiht_phone">请输入手机号码</string>
    <string name="login_hiht_pwd">请输入密码</string>
    <string name="login_hiht_pwd2">请再次输入密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_code_login">验证码登陆</string>
    <string name="login_wx">微信登陆</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_hiht_code">请输入验证码</string>
    <string name="login_agreement">同意用户协议</string>
    <string name="login_register_login">注册并登陆</string>
    <string name="forget_login">更改并登陆</string>
    <string name="bottomBarTab_video">短视频</string>
    <string name="bottomBarTab_advertisement">看广告</string>
    <string name="bottomBarTab_throw_advertisement">投广告</string>
    <string name="bottomBarTab_on_demand">点播</string>
    <string name="bottomBarTab_me">我的</string>
    <string name="topbar_enclosure">附近</string>
    <string name="topbar_hot">热门</string>
    <string name="share">分享</string>
    <string name="Complaint">投诉</string>
    <string name="Send_out">发送</string>
    <string name="set_red_Total_amount">总金额</string>
    <string name="set_red_Fixed_amount">固定金额</string>
    <string name="set_red_Random_amount">随机金额</string>
    <string name="set_red_Per_person_Random">每人抽到随机金额</string>
    <string name="set_red_Per_person_Fixed">每人抽到固定金额</string>
    <string name="set_red_Number_of_red_packets">红包个数</string>
    <string name="set_red_Fill_in_a_number">填写个数</string>
    <string name="set_red_Plug_money_into_a_red_bag">塞钱进红包</string>
    <string name="individual">个</string>
    <string name="element">元</string>
    <string name="set_single_amount">单个金额</string>
    <string name="confirm">确定</string>
    <string name="search_hiht">请输入当前城市的目标</string>
    <string name="clear_msg">清除历史记录</string>
    <string name="location_position">定位位置:</string>
    <string name="scope_delivery">投放范围:</string>
    <string name="scope_deliveryy">发布范围</string>
    <string name="type_advertisement">广告类型:</string>
    <string name="type_time">广告时长:</string>
    <string name="launch_time">投放时间:</string>
    <string name="source_material">素材：</string>
    <string name="please_material">请编辑文字素材内容</string>
    <string name="screen">筛选</string>
    <string name="reset">重置</string>
    <string name="reason">原因：</string>
    <string name="play_list">播放列表</string>
    <string name="forward_element">可提现(元)</string>
    <string name="forward_money">请输入提现金额(按百整数倍)</string>
    <string name="forward_notice">注：预计3-5个工作日到账，节假日顺延</string>
    <string name="please_card_name">请输入持卡人姓名</string>
    <string name="please_card">请输入银行卡号</string>
    <string name="please_bank">请选择开户银行</string>
    <string name="please_sex">请选择性别</string>
    <string name="please_report">请输入投诉举报内容</string>

    <string name="empty_hundred">不能提现，余额不超过100</string>
    <string name="empty_100">只能取100的整数</string>
    <string name="empty_time">时间不能为空</string>
    <string name="empty_card">银行卡不能为空</string>
    <string name="empty_scope">位置与范围不能为空</string>
    <string name="empty_advertising_time">广告时长不能为空</string>
    <string name="empty_launch_time">投放时间不能为空</string>
    <string name="empty_money">金额不能为空</string>
    <string name="empty_individual">数量不能为空</string>
    <string name="empty_text">文字不能为空</string>
    <string name="empty_number">数量不能为空</string>
    <string name="empty_img">图片不能为空</string>
    <string name="empty_video">视频不能为空</string>
    <string name="empty_phone">手机号码不能为空</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="error_pwd_size">密码长度不能小于6位或者大于16位</string>
    <string name="error_pwd_atypi">两次密码不一致</string>
    <string name="mobile_exact_phone">手机号码格式不正确</string>
    <string name="empty_agreement">请选择协议</string>
    <string name="user_register_agreement">用户注册协议</string>
    <string name="mission_introduction">任务介绍 ></string>
    <string name="top_mission_introduction">任务介绍</string>
    <string name="Please_enter_the_placement_position">请输入投放位置</string>
    <string name="location_scope">位置与范围</string>
    <string name="select_img">选择图片:</string>
    <string name="select_video">选择视频:</string>
    <string name="please_scope">请选择发布范围</string>
    <string name="please_advertising_scope">请选择广告类型</string>
    <string name="can_in">可投放</string>
    <string name="launch_list">投放列表：</string>
    <string name="payment">支付</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="equipment_range">设备范围</string>
    <string name="equipment_type">设备型号</string>
    <string name="equipment_type2">设备型号:</string>
    <string name="total_selection">全选</string>
    <string name="select_province">选择省</string>
    <string name="select_city">选择市</string>
    <string name="select_area">选择区</string>
    <string name="land_film">播放电影</string>
    <string name="recharge">充值</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="consumption_detail">消费明细</string>
    <string name="recharge_detail">充值明细</string>
    <string name="bring_detail">提现明细</string>
    <string name="bring">提现</string>
    <string name="select_amount">选择充值金额</string>
    <string name="payment_method">请选择支付方式</string>
    <string name="please_recharge">请输入充值金额</string>
    <string name="red_recharge">红包币充值</string>
    <string name="advertisement_recharge">广告币充值</string>
    <string name="bank_card_management">银行卡管理</string>
    <string name="default_bank_card">默认银行卡</string>
    <string name="default_bank_card2">设为默认银行卡</string>
    <string name="agreement_agreement">同意《银联用户协议》</string>
    <string name="delete">删除</string>
    <string name="add">增加</string>
    <string name="time">时间</string>
    <string name="consumption_type">消费类型</string>
    <string name="consumption_price">消费金额</string>
    <string name="consumption">消费</string>
    <string name="user_id">用户ID</string>
    <string name="user_integral">用户积分</string>
    <string name="nick">昵称</string>
    <string name="phone">手机</string>
    <string name="sex">性别</string>
    <string name="man">   男</string>
    <string name="woman">   女</string>
    <string name="mobile_devices">手机设备</string>
    <string name="terminal_devices">终端设备</string>
    <string name="complaints_report">投诉举报</string>
    <string name="contact_merchant">联系商家</string>
    <string name="check_version">检查版本</string>
    <string name="modify_password">修改密码</string>
    <string name="multiple_choices">（可多选）</string>
    <string name="red_envelopes">红包</string>
    <string name="advertising">广告投放</string>
    <string name="short_video_release">短视频发布</string>
    <string name="not_wx_pay">您未安装最新版本微信，不支持微信支付，请安装或升级微信版本</string>

    <string name="top_forget_pwd">忘记密码</string>
    <string name="top_launch_time">投放时间</string>
    <string name="top_code_login">验证码登陆</string>
    <string name="top_user_protocol">用户协议</string>
    <string name="top_binding_wx">绑定微信</string>
    <string name="top_ranking_list">排行榜</string>
    <string name="top_ranking_week">周赞榜</string>
    <string name="top_ranking_month">月赞榜</string>
    <string name="top_set_packet">设置红包</string>
    <string name="top_choose_cover">选择封面</string>
    <string name="top_me">我的</string>
    <string name="top_me_">我</string>
    <string name="top_Look_advertisement">看广告</string>
    <string name="top_my_red_envelopes">我的红包</string>
    <string name="top_pager">消息中心</string>
    <string name="top_throw_advertisement">投广告</string>
    <string name="top_launch_details">投放详情</string>
    <string name="top_terminal_equipment">终端设备</string>
    <string name="top_add_card">新增银行卡</string>
    <string name="top_recharge_detailed">充值明细</string>
    <string name="top_consumption_detailed">消费明细</string>
    <string name="top_forward_detailed">提现明细</string>
    <string name="top_my_launch">我的投放记录</string>
    <string name="top_my_video">我的视频作品</string>
    <string name="top_integral_record">积分记录</string>
    <string name="top_customer">客服中心</string>
    <string name="top_ad_details">广告详情</string>
    <string name="top_look_ads">看广告</string>
    <string name="top_more_problems">更多问题</string>
    <string name="top_screen">筛选</string>

    <string name="wallet">钱包</string>
    <string name="release_record">我的投放记录</string>
    <string name="equipment">我的设备</string>
    <string name="video_works">我的视频作品</string>
    <string name="integral_record">积分记录</string>
    <string name="online_service">在线客服</string>
    <string name="about_us">关于我们</string>
    <string name="download">下载</string>
    <string name="set">设置</string>
    <string name="update_phone">更改手机号</string>
    <string name="update_nick">更改昵称</string>
    <string name="update_sex">更改性别</string>
    <string name="preservation">保存</string>
    <string name="see">查看</string>
    <string name="hotspot_issues">热点问题</string>
    <string name="treated">待处理</string>
    <string name="review_through">审核通过</string>
    <string name="review_no_through">审核不通过</string>

</resources>
