<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_top" />

        <LinearLayout
            android:padding="@dimen/px20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                 android:layout_weight="1"
                android:text="@string/time"
                style="@style/Tv15Bkla" />

            <TextView
                android:layout_weight="1"
                android:text="@string/consumption_type"
                style="@style/Tv15Bkla" />

            <TextView
                android:layout_weight="1"
                android:text="@string/consumption_price"
                style="@style/Tv15Bkla" />

        </LinearLayout>

        <View
            style="@style/divider_1"
            android:layout_height="@dimen/px20"/>

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:layout_width="match_parent"
            android:background="@color/white_f4f4f4"
            android:id="@+id/refreshLayout"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </LinearLayout>
</layout>