<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ly_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_f4f4f4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/px20">

                        <TextView
                            style="@style/Tv15Bkla"
                            android:text="@string/equipment_type2" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/px20"
                            android:descendantFocusability="blocksDescendants">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/rv_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly_province"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px20"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/px20">

                        <TextView
                            style="@style/Tv15Bkla"
                            android:text="@string/select_province" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/px20"
                            android:descendantFocusability="blocksDescendants">

                            <com.example.library.AutoFlowLayout
                                android:id="@+id/rv_province"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px5"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/px20">

                        <TextView
                            android:id="@+id/tv_city"
                            style="@style/Tv15Bkla"
                            android:text="@string/select_city" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/px20"
                            android:descendantFocusability="blocksDescendants">

                            <com.example.library.AutoFlowLayout
                                android:id="@+id/rv_city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px5"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/px20">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/Tv15Bkla"
                                android:text="@string/select_area" />

                            <TextView
                                android:visibility="gone"
                                style="@style/Tv12gray_5D5C5A"
                                android:layout_marginLeft="@dimen/px10"
                                android:text="@string/multiple_choices" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/px20"
                            android:descendantFocusability="blocksDescendants">

                            <com.example.library.AutoFlowLayout
                                android:id="@+id/rv_area"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <View style="@style/divider_dropshadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/px20">

            <com.flyco.roundview.RoundTextView
                android:id="@+id/bt_reset"
                style="@style/RoundBlueTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="@dimen/px15"
                android:text="@string/reset"
                app:rv_backgroundColor="@color/gray_999999"
                app:rv_backgroundPressColor="@color/gray_656565"
                app:rv_cornerRadius="@dimen/px30" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/bt_submit"
                style="@style/RoundBlueTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/px40"
                android:layout_weight="1"
                android:padding="@dimen/px15"
                android:text="@string/confirm"
                app:rv_backgroundColor="@color/violet_773FE3"
                app:rv_backgroundPressColor="@color/violet_562EA6"
                app:rv_cornerRadius="@dimen/px30" />

        </LinearLayout>

    </LinearLayout>

</layout>